# Semantic--Firewall

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  FEATURES_INTEGRATION_GUIDE.md  FEATURE_IMPLEMENTATION_SUMMARY.md  PAPER_READINESS_CHECKLIST.md  README.md  api.py  app.py  audit.db  benchmark_pii.py  benchmark_unsafe.py  check_db.py  custom_rules.json  debug.py  docker-compose.yml  evaluate.py  evauluate.py  full_evaluation.py  hf_evaluation_results.csv  injection_only_evaluation.py  leaderboard.json  main.py  nemo_evaluation_results.csv  policy_presets.json  pyproject.toml  red_team_hacker.py  requirements.txt  smoke_test.ps1  test_advanced_features.py  test_dos.py  test_neuralchemy_dataset.py  threat_intel_feed.json
agents/: abuse_detector.py  custom_rules_detector.py  injection_detector.py  llm_client.py  pii_detector.py  secrets_detector.py  threat_intel_detector.py  unsafe_content_detector.py
api_app/: __init__.py  main.py  schemas.py
benchmarking/: __init__.py  adapters.py  build_golden_eval_set.py  extract_dataset_from_tests.py  run_market_benchmark.py
browser_extension/: content.js  manifest.json  popup.css  popup.html  popup.js
config/: custom_rules.json  policy_presets.json  threat_intel_feed.json
datasets/: benchmark_from_tests.jsonl  canary_prompts.jsonl  golden_eval_set.jsonl
docs/: FEATURES_INTEGRATION_GUIDE.md  FEATURE_IMPLEMENTATION_SUMMARY.md  PAPER_READINESS_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  STRUCTURE_ROADMAP.md  semantic_firewall_ieee.tex  semantic_firewall_paper.tex
orchestrator/: alerting.py  audit_logger.py  (+10 more)
(+994 files in other folders)
