[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-firewall"
version = "0.1.0"
description = "Agentic semantic firewall for LLM safety (SDK + API + UI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Semantic Firewall Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "slowapi>=0.1.9",
  "streamlit>=1.36.0",
  "plotly>=5.22.0",
  "groq>=0.9.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_firewall*"]
